Test and Benchmark works